# rust-gcm

fv/: Cargo.toml  pyproject.toml
fv/benches/: eos_bench.rs
fv/src/: lib.rs
fv/src/block/: block1d.rs  block2d.rs  iterator1d.rs  iterator2d.rs  mod.rs
fv/src/eos/: eos.rs  eos_trait.rs  mod.rs
fv/src/hydro/: hydro.rs  hydro_kernel.rs  hydro_reconstruct.rs  mod.rs
fv/src/mesh/: mesh.rs
fv/src/reconstruct/: mod.rs  poly.rs  weno3.rs  weno5.rs
fv/src/riemann/: lmars.rs  mod.rs  roe_shallow_water.rs
fv/src/utils/: common.rs  defs.rs  mod.rs
