[package]
name = "fv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fv"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.18.1"
approx = "0.5.1"
criterion = "0.4.0"
itertools = "0.10.5"

[[bench]]
name = "eos_bench"
harness = false
